--- a/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/app/src/main/res/layout/activity_transaction_detail.xml
@@ -91,6 +91,15 @@
                     android:paddingVertical="5dp"
                     android:layout_marginTop="8dp"
                     android:layout_gravity="center" />
+                
+                <!-- ADDED ICON TYPE HERE -->
+                <ImageView
+                    android:id="@+id/iconType"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="12dp"
+                    android:src="@drawable/ic_income" />
 
                 <!-- DETAIL SECTION -->
                 <LinearLayout
